rename and set custom exception

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,8 @@
 
     <string name="temp">%.1f°C</string>
     <string name="humidity">%d%%</string>
+
+    <string name="default_error_message">An error has occurred.</string>
+    <string name="http_requst_fail_error_message">Please try again in a few minutes.</string>
+    <string name="null_response_body_error_message">request has failed.</string>
 </resources>
